--- a/Власова_Дарья_QuickPassTasks.ipynb
+++ b/Власова_Дарья_QuickPassTasks.ipynb
@@ -431,8 +431,8 @@
         "        for t in range(len(matrix_a[0])):\n",
         "            mtl[m][t]=m1[m][t]+m2[m][t]\n",
         "    return mtl\n",
-        "matrix_a=[[tuple(float(a) for a in input()) for m in range(column)] for t in range(rows)]\n",
-        "matrix_b=[[tuple(float(a) for a in input()) for m in range(column)] for t in range(rows)]\n",
+        "matrix_a=[[tuple(float(a) for a in input()) for m in range(matrix_a[0])] for t in range(matrix_a)]\n",
+        "matrix_b=[[tuple(float(a) for a in input()) for m in range(matrix_b[0])] for t in range(matrix_b)]\n",
         "total=(matrix_sum(matrix_a,matrix_b))\n",
         "total\n",
         "print(np.matrix(total))"
